# team_projects

./: .coverage  .dockerignore  .gitattributes  .gitignore  AGENTS.md  LICENSE  MEMORY.md  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  员工1_用户端前端完整实施计划.md  员工1_统一前端完整实施计划.md  知识库平台_5人团队分工协作方案.md  知识库平台_6人团队分工协作方案.md
.github/: pull_request_template.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py
backend/app/audit/: __init__.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  dependencies.py  router.py  schemas.py  security.py  service.py
backend/app/common/: __init__.py  config.py  database.py  exceptions.py  logging.py  metrics.py  model_registry.py  models.py  openapi.py  organization.py  schemas.py  seed.py
backend/app/departments/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/documents/: __init__.py  chunking.py  indexing.py  markdown.py  models.py  permissions.py  retrieval_sync.py  router.py  schemas.py  service.py  storage.py
backend/app/exports/: __init__.py  all.py
backend/app/exports/_shared/: signing.py  storage.py
backend/app/exports/exporters/: __init__.py
backend/app/favorites/: __init__.py  models.py  router.py  schemas.py
backend/app/knowledge/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  api.py  repository.py  schemas.py  security.py  service.py
backend/app/models/providers/: __init__.py  base.py  openai.py
backend/app/notifications/: __init__.py  models.py  router.py  schemas.py
backend/app/parsers/: __init__.py  archive.py  base.py  email_ebook.py  html_xml.py  image_ocr.py  mime.py  office.py  pdf.py  registry.py  text.py
backend/app/rag/: __init__.py  answer_cache.py  embeddings.py  guard.py  intent.py  metrics.py  query_rewrite.py
backend/app/rag/_shared/: audit_helper.py  permissions.py  sse.py  text.py
backend/app/rag/chat/: __init__.py  all.py
backend/app/rag/conversations/: __init__.py  all.py
backend/app/rag/search/: __init__.py  api.py  repository.py  schemas.py  service.py  stream.py
backend/app/rag/sensitive_filter/: __init__.py  bert_filter.py  regex_filter.py  router.py  service.py
backend/app/rag/tests/: __init__.py  all.py
backend/app/rag/vector_store/: __init__.py  dual.py  milvus.py  pgvector.py
backend/app/users/: __init__.py  dashboard_router.py  dashboard_schemas.py  dashboard_service.py  role_router.py  role_schemas.py  role_service.py  router.py  schemas.py  service.py
backend/app/worker/: __init__.py  queue.py  settings.py
backend/migrations/: alembic.ini  env.py  script.py.mako
backend/migrations/versions/: 0001_init_core_tables.py  0002_documents_tables.py  0002_employee5_models.py  0003_employee5_chunks.py  0004_employee5_conversations.py  0005_employee5_export_tasks.py  0006_employee5_retrieval_tests.py  0007_merge_all_branches.py  0008_favorites.py  0009_unique_knowledge_base_names.py  0010_notifications.py  0011_qwen_embedding_vector.py  0012_schema_consistency.py  0013_user_session_version.py  0014_conversation_integrity.py  0015_embedding_vector_1536.py  0016_departments.py  0017_single_builtin_user_role.py  0018_personal_kb_chunk_strategy.py  0019_retrieval_metrics.py  0020_document_recycle_bin.py  0021_unique_document_names.py
backend/scripts/: bootstrap_admin.py  check_provider_dns.py  reprocess_docs.py  seed_db.py  seed_rag_demo.py  smoke_embedding.py  smoke_rag_answer.py
backend/tests/: conftest.py  test_api_docs.py  test_health.py  test_sensitive_filter.py  test_suite_quality.py
backend/tests/contract/: __init__.py  conftest.py  test_audit_contract.py  test_auth_contract.py  test_chat_contract.py  test_dashboard_query_contract.py  test_documents_contract.py  test_exports_contract.py  test_knowledge_bases_contract.py  test_model_permission_contract.py  test_models_contract.py  test_openapi_consistency.py  test_permission_matrix.py  test_response_format.py  test_retrieval_contract.py  test_tasks_contract.py  test_users_contract.py
backend/tests/integration/: __init__.py  conftest.py  test_auth_session_invalidation.py  test_business_dashboard_incentives.py  test_chat_to_citation.py  test_conversation_lifecycle.py  test_document_lifecycle.py  test_export_to_download.py  test_permission_change.py  test_upload_to_retrieval.py  test_upload_to_retrieval_postgres.py
backend/tests/performance/: __init__.py  test_concurrent_chat.py  test_large_file.py  test_queue_backlog.py  test_retrieval_latency.py
backend/tests/security/: __init__.py  test_authorization.py  test_download_security.py  test_employee5_secret.py  test_secret_leak.py  test_upload_security.py  test_xss.py
backend/tests/unit/: test_answer_cache.py  test_archive_safety.py  test_audit_fixes.py  test_audit_safety.py  test_auth_cookie_config.py  test_bootstrap_seed.py  test_business_dashboard.py  test_common.py  test_document_preview.py  test_document_upload_safety.py  test_embeddings.py  test_employee5_exports.py  test_employee5_models.py  test_employee5_retrieval_tests.py  test_employee5_search.py  test_employee5_shared.py  test_intent_rewrite.py  test_keyword_terms.py  test_milvus_store.py  test_model_api.py  test_model_registry.py  test_models.py  test_multi_kb_search.py  test_rag_answer_stream.py  test_rag_guard.py  test_rag_guard_entrypoints.py  test_rag_rerank_and_evaluation.py  test_security.py  test_user_service_safety.py  test_worker_queue.py
backend/tests/unit/documents/: test_chunk_index.py  test_document_lifecycle.py  test_document_name_conflicts.py  test_retrieval_sync.py
backend/tests/unit/parsers/: conftest.py  test_office.py  test_parser_isolation.py  test_parsers.py
deploy/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/: frontend-feature-guide.md  project-audit-2026-07-20.md  project-governance.md
samples/: README.md  manifest.json
scripts/: backup-files.sh  backup-postgres.sh  backup.sh  build-release.sh  configure-main-protection.ps1  export_openapi.py  fix_login.py  restore.sh  (+5 more)
(+276 files in other folders)
